--- a/MSSQL.yaml
+++ b/MSSQL.yaml
@@ -37,7 +37,7 @@ spec:
         - containerPort: 1433
         env:
         - name: SA_PASSWORD
-          value: "Iiua12345678"
+          value: "password"
         - name: ACCEPT_EULA
           value: "Y"
         volumeMounts:
